--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #111;
-  color: #eee;
+  color: #363131;
   margin: 0;
   padding: 0;
 }
